[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/posepal/settings_popup/DebugHBox.gd" type="Script" id=1]
[ext_resource path="res://addons/posepal/assets/icons/icon_expand.png" type="Texture" id=2]
[ext_resource path="res://addons/posepal/assets/PostuRecordTheme.tres" type="Theme" id=3]
[ext_resource path="res://addons/posepal/interface/Titlebar.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/posepal/assets/icons/icon_settings.png" type="Texture" id=5]
[ext_resource path="res://addons/posepal/settings_popup/SettingsPopup.gd" type="Script" id=6]
[ext_resource path="res://addons/posepal/settings_popup/ExtensionHBox.gd" type="Script" id=7]

[node name="SettingsPopup" type="WindowDialog"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -153.5
margin_top = -69.0
margin_right = 153.5
margin_bottom = 69.0
rect_min_size = Vector2( 260, 95 )
theme = ExtResource( 3 )
resizable = true
script = ExtResource( 6 )

[node name="MarginCon" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="MarginCon"]
margin_left = 10.0
margin_top = 10.0
margin_right = 297.0
margin_bottom = 128.0

[node name="TitleBar" parent="MarginCon/VBox" instance=ExtResource( 4 )]
margin_right = 287.0
title_name = "PosePal Settings"
icon_texture = ExtResource( 5 )
show_icon = true
window_path = NodePath("../../..")

[node name="ExtensionHBox" type="HBoxContainer" parent="MarginCon/VBox"]
margin_top = 28.0
margin_right = 287.0
margin_bottom = 44.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginCon/VBox/ExtensionHBox"]
margin_top = 1.0
margin_right = 97.0
margin_bottom = 15.0
text = "File Extension: "

[node name="MenuButton" type="MenuButton" parent="MarginCon/VBox/ExtensionHBox"]
margin_left = 101.0
margin_right = 157.0
margin_bottom = 16.0
rect_min_size = Vector2( 56, 0 )
text = "res"
icon = ExtResource( 2 )
flat = false
expand_icon = true
items = [ "res", null, 0, false, false, 0, 0, null, "", false ]

[node name="DebugHBox" type="HBoxContainer" parent="MarginCon/VBox"]
margin_top = 48.0
margin_right = 287.0
margin_bottom = 64.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="MarginCon/VBox/DebugHBox"]
margin_top = 1.0
margin_right = 81.0
margin_bottom = 15.0
text = "Debug Mode"

[node name="MenuButton" type="MenuButton" parent="MarginCon/VBox/DebugHBox"]
margin_left = 85.0
margin_right = 141.0
margin_bottom = 16.0
rect_min_size = Vector2( 56, 0 )
text = "Off"
icon = ExtResource( 2 )
flat = false
expand_icon = true
items = [ "Off", null, 0, false, false, 0, 0, null, "", false ]

[node name="SaveButton" type="Button" parent="MarginCon/VBox"]
margin_top = 103.0
margin_right = 287.0
margin_bottom = 118.0
size_flags_horizontal = 3
size_flags_vertical = 10
text = "Save"
